2004-11-15 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/kbd/Makefile.in: @MKF_LIBS@ -> @MKF_LIBS_FOR_MODULE@

2004-11-14 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/w3mmlconfig/Makefile: moved to...
	* tool/w3mmlconfig/Makefile.in: this for autoconfication.

	* configure.in, tool/w3mmlconfig/mlconfig.cgi.in,
	  tool/w3mmlconfig/w3mmlconfig.in, tool/w3mmlconfig/Makefile.in:
	  autoconfication

2004-11-14 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/w3mmlconfig/mlconfig.cgi.in: ~/.mlterm/challenge support.

	* tool/w3mmlconfig/section/encoding:
	  "xim", "xim_locale" -> "input_method"

2004-11-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* kiklib/src/kik_map.h: An expanded hash table was broken. Fixed.
	  (#1061470)

2004-11-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im.c, xwindow/x_im_candidate_screen.c,
	  xwindow/x_im_candidate_screen.h, inputmethod/iiimf/im_iiimf.c,
	  inputmethod/m17nlib/im_m17nlib.c, inputmethod/uim/im_uim.c:
	  allowed to list candidates horizontally.

	* xwindow/x_im.h: increased IM_API_VERSION.

2004-11-07 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/mc_im.c: "None" -> _("None")

2004-11-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* xwindow/x_im.c: don't increase ref_count_uim and ref_count_m17nlib if
	  x_im_new() failed.
	
	* tool/mlconfig/mc_sb_view.c (has_rc_file): I forgot closing dir, fixed.

2004-11-04 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/m17nlib/im_m17nlib.c:
	- - fixed a bug that the last preedit text was not cleared when
	    deactivating the input method. (Thanks to Ken'ichi HANDA)
	    <http://sourceforge.net/mailarchive/message.php?msg_id=9913473>
	  - changed the format in the status window.
	  - minor cleanups.

	* man/mlterm.1: added explanation for keyboard input method to
	  'GUI CONFIGURATOR'.

2004-10-29 Seiichi SATO <ssato@sh.rim.or.jp>

	* tool/mlconfig/Makefile.in: -lmkf (required from libim-iiimf.so)

2004-10-29 Seiichi SATO <ssato@sh.rim.or.jp>

	Removed -lkik and -lmkf from linker flag of modules.